# AndroidOpenGlDemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-render.cpp
app/src/main/java/com/mark/androidopengldemo/: MainActivity.kt  MainApplication.java  MyLineView.java  MyLineView2.java
app/src/main/java/com/mark/androidopengldemo/draw/: Draw3DObjectActivity.kt  DrawCircularActivity.kt  DrawFaceActivity.kt  DrawLineActivity.kt  DrawParticleActivity.java  DrawPointActivity.kt  DrawRectActivity.java  DrawTextureActivity.kt  DrawTriangleActivity.kt
app/src/main/java/com/mark/androidopengldemo/glview/: OpenGLView.java
app/src/main/java/com/mark/androidopengldemo/render/: BallRender.java  CirculeRender.java  LineRender.java  MyGLView.java  MyRender.java  PointRender.java  RectangleRender.java  Sphere.java  TriangleRender.java
app/src/main/java/com/mark/androidopengldemo/test/: GlViewTestActivity.java  MyDiyViewActivity.java
app/src/main/java/com/mark/androidopengldemo/util/: ShaderHelper.java  TextResReader.java
app/src/main/res/layout/: activity_cir.xml  activity_diy_line.xml  activity_draw_3d.xml  activity_draw_point.xml  activity_draw_triangle.xml  activity_main.xml  activity_rect.xml  activity_texture.xml  gl_test.xml
app/src/main/res/raw/: particle_fragment_shader.glsl  particle_vertext_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
